added header ids and back buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Recipes</h1>
+    <h1 id=header>Recipes</h1>
 
     <ul>
         <li>
@@ -20,7 +20,11 @@
             <a href="pepperoni-pizza.html">Pepperoni Pizza Recipe.</a>
         </li>
     </ul>
-
-
+    <p>
+        <a href="#header">Return to top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to main page</a>
+    </p>
 </body>
 </html>
