--- a/meat-free-lasagne.html
+++ b/meat-free-lasagne.html
@@ -7,7 +7,7 @@
     <title>Meat-Free Lasagne Recipe</title>
 </head>
 <body>
-    <h1>Meat-Free Lasagne Recipe</h1>
+    <h1 id=header>Meat-Free Lasagne Recipe</h1>
 
     <img src="./images/lasagne.jpg" alt="Cooked meat free lasagne.">
 
@@ -72,6 +72,12 @@
                 Cook in the oven for 40 – 45 minutes until golden on top and gently bubbling.
             </li>
         </ol>
+    </p>
+    <p>
+        <a href="#header">Return to top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to main page</a>
     </p>
 </body>
 </html>
