--- a/pepperoni-pizza.html
+++ b/pepperoni-pizza.html
@@ -7,7 +7,7 @@
     <title>Pepperoni Pizza Recipe</title>
 </head>
 <body>
-    <h1>Pepperoni Pizza Recipe</h1>
+    <h1 id=header>Pepperoni Pizza Recipe</h1>
 
     <img src="./images/pepperoni-pizza.jpg" alt="Pepperoni Pizza.">
 
@@ -47,6 +47,12 @@
                 Remove from oven and top with Baby Leaf Spinach & Wild Rocket
             </li>
         </ol>
+    </p>
+    <p>
+        <a href="#header">Return to top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to main page</a>
     </p>
 </body>
 </html>
