--- a/spaghetti-bolognese.html
+++ b/spaghetti-bolognese.html
@@ -7,7 +7,7 @@
     <title>Spaghetti Bolognese Recipe</title>
 </head>
 <body>
-    <h1>Spaghetti Bolognese Recipe</h1>
+    <h1 id=header>Spaghetti Bolognese Recipe</h1>
 
     <img src="./images/spaghetti-bolognese.jpg" alt="Perfect spaghetti bolognese.">
 
@@ -92,6 +92,12 @@
                  parmesan and fresh basil leaves.
             </li>
         </ol>
+    </p>
+    <p>
+        <a href="#header">Return to top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to main page</a>
     </p>
 </body>
 </html>
